--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        
+
+    <!-- Add fontawesome script (Placeholder for abdulmajeed to update if required)-->
+    <script src="https://kit.fontawesome.com/d17dbf40bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
