--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- Add custom CSS -->
     <link rel="stylesheet" href="style.css">
 
-    
+    <!-- Add JavaScript file -->
+    <script src="script.js"></script>
 </head>
 
 <body>
