correct css, js links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Add custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Add JavaScript file -->
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </head>
 
 <body>
