Added game title and a instruction button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 </head>
 
 <body>
-
-
-
+    <div class="Game ui">
+    <!-- Game Title -->
+    <h1 class="Game title">Game Name</h1>
+    <div></div>
+     <button id="instructionsButton" class="buttons">Instructions</button>
+    </div>
 
     <!-- Add bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
