correction in code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="Game ui">
     <!-- Game Title -->
     <h1 class="Game title">Game Name</h1>
-    <div></div>
+    <div>
      <button id="instructionsButton" class="buttons">Instructions</button>
     </div>
 
