Added question and word display and orginised the code better

--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
 <body>
     <div class="Game ui">
     <!-- Game Title -->
-    <h1 class="Game title">Game Name</h1>
+    <h1 class="game title">Game Name</h1>
+    <!-- Instruction Button for the right side -->
     <div>
      <button id="instructionsButton" class="buttons">Instructions</button>
     </div>
+    </div>
+    <!-- Game Display -->
+    <div class="Game ui">
+        <!-- Question and the word display -->
+        <h2 id="question" class="game">Question</h2>
+        <div id="wordDisplay" class="game">_ _ _ _ _</div>
+
 
     <!-- Add bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
