--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </head>
 
 <body>
-    <div class="Game ui">
+    <div class="Foundation">
     <!-- Game Title -->
     <h1 class="game title">Game Name</h1>
     <!-- Instruction Button for the right side -->
     <div>
+     <button id="cheatButton" class="Cheat-button">Cheat</button>
      <button id="instructionsButton" class="buttons">Instructions</button>
     </div>
     </div>
@@ -31,7 +32,9 @@
         <!-- Question and the word display -->
         <h2 id="question" class="game">Question</h2>
         <div id="wordDisplay" class="game">_ _ _ _ _</div>
-
+        <div id="lettersUsed" class="mt-4">
+            <strong>Letters Used:</strong> A, B, C
+        </div>
 
     <!-- Add bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
