added highest score label

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <div class="Foundation">
     <!-- Game Title -->
     <h1 class="game title">Game Name</h1>
+     <!-- Highest Score Label -->
+    <div class="hs">
+    <label for="highestScore" class="label">Highest Score</label>
+    </div>
     <!-- Instruction Button for the right side -->
     <div>
      <button id="cheatButton" class="Cheat-button">Cheat</button>
@@ -29,12 +33,13 @@
     </div>
     <!-- Game Display -->
     <div class="Game ui">
-        <!-- Question and the word display -->
-        <h2 id="question" class="game">Question</h2>
-        <div id="wordDisplay" class="game">_ _ _ _ _</div>
-        <div id="lettersUsed" class="mt-4">
-            <strong>Letters Used:</strong> A, B, C
-        </div>
+    <!-- Question and the word display -->
+    <h2 id="question" class="game">Question</h2>
+    <div id="wordDisplay" class="game">_ _ _ _ _</div>
+    <div id="lettersUsed" class="mt-4">
+    <strong>Letters Used:</strong> A, B, C
+    </div>
+
 
     <!-- Add bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
