--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <body class="bg-light">
     <div class="container text-center py-5">
         <!-- Game Title -->
-     <h1 class="mb-4">Game Name</h1>
- <!-- Highest score -->
-       <div class="row justify-content-center">
+        <h1 class="mb-4">Game Name</h1>
+        <!-- Highest score -->
+        <div class="row justify-content-center">
             <div class="col-md-3 text-start">
-             <div class="mb-3">
+                <div class="mb-3">
 
                     <label for="highestScore" class="form-label">Highest Score</label>
-             </div>
-                 <!-- Previous attempts board -->
+                </div>
+                <!-- Previous attempts board -->
                 <div>
                     <h5>Previous Attempts</h5>
                     <ul class="list-group">
@@ -36,7 +36,6 @@
 
                         <li class="list-group-item">Attempt 2</li>
 
-                    
                         <li class="list-group-item">Attempt 3</li>
                     </ul>
                 </div>
@@ -47,17 +46,21 @@
             <div class="col-md-6">
                 <h2 id="question" class="mb-4">Question</h2>
                 <div id="wordDisplay" class="mb-4">_ _ _ _ _</div>
+                <div id="user-inputs">
+                    <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
+                    <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
+                </div>
                 <div id="lettersUsed" class="mt-4">
                     <strong>Letters Used:</strong> A, B, C
                 </div>
             </div>
 
-            
-     <div class="col-md-3 text-end">
+
+            <div class="col-md-3 text-end">
                 <button id="cheatButton" class="btn btn-warning mb-3">Cheat</button>
                 <button id="instructionsButton" class="btn btn-secondary">Instructions</button>
-     </div>
-    </div>
+            </div>
+        </div>
     </div>
 
 
