--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 
             <div class="col-md-3 text-end">
-                <button id="cheatButton" class="btn btn-warning mb-3">Cheat</button>
-                <button id="instructionsButton" class="btn btn-secondary">Instructions</button>
+                <button id="cheat-button" class="btn btn-warning mb-3">Cheat</button>
+                <button id="instructions-button" class="btn btn-secondary">Instructions</button>
             </div>
         </div>
     </div>
