element names harmonised and start button listener added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col-md-3 text-start">
                 <div class="mb-3">
 
-                    <label for="highestScore" class="form-label">Highest Score</label>
+                    <label for="highest-score" class="form-label">Highest Score</label>
                 </div>
                 <!-- Previous attempts board -->
                 <div>
@@ -39,18 +39,18 @@
                         <li class="list-group-item">Attempt 3</li>
                     </ul>
                 </div>
-                <button id="newGameButton" class="btn btn-primary mt-3">New Game</button>
+                <button id="new-game-button" class="btn btn-primary mt-3">New Game</button>
             </div>
 
             <!-- Game ui -->
             <div class="col-md-6">
                 <h2 id="question" class="mb-4">Question</h2>
-                <div id="wordDisplay" class="mb-4">_ _ _ _ _</div>
+                <div id="word-display" class="mb-4">_ _ _ _ _</div>
                 <div id="user-inputs">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
                 </div>
-                <div id="lettersUsed" class="mt-4">
+                <div id="letters-used" class="mt-4">
                     <strong>Letters Used:</strong> A, B, C
                 </div>
             </div>
