--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
 </head>
 
 <body class="bg-light">
+    <!-- Nav bar with Game Title and instructions button -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between w-100">
+                <h1 class="navbar-brand mx-auto game-title">Game Name</h1>
+                <button class="btn btn-secondary" id="instructions-button">Instructions</button>
+            </div>
+        </div>
+    </nav>
     <div class="container text-center py-5">
-        <!-- Game Title -->
-        <h1 class="mb-4">Game Name</h1>
         <!-- Highest score -->
         <div class="row justify-content-center">
             <div class="col-md-3 text-start">
@@ -45,7 +52,7 @@
             <!-- Game ui -->
             <div class="col-md-6">
                 <h2 id="question" class="mb-4">Question</h2>
-                <div id="word-display" class="mb-4">_ _ _ _ _</div>
+                
                 <div id="user-inputs">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
@@ -58,7 +65,6 @@
 
             <div class="col-md-3 text-end">
                 <button id="cheat-button" class="btn btn-warning mb-3">Cheat</button>
-                <button id="instructions-button" class="btn btn-secondary">Instructions</button>
             </div>
         </div>
     </div>
