--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Added Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <!-- Add custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -52,7 +57,7 @@
             <!-- Game ui -->
             <div class="col-md-6">
                 <h2 id="question" class="mb-4">Question</h2>
-                
+                <div id="wordDisplay" class="mb-4">_ _ _ _ _</div>
                 <div id="user-inputs">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
