word-display nomenclature

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- Game ui -->
             <div class="col-md-6">
                 <h2 id="question" class="mb-4">Question</h2>
-                <div id="wordDisplay" class="mb-4">_ _ _ _ _</div>
+                <div id="word-display" class="mb-4">_ _ _ _ _</div>
                 <div id="user-inputs">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
