--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- Added Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
 
     <!-- Add custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -28,7 +29,11 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between w-100">
                 <h1 class="navbar-brand mx-auto game-title">Game Name</h1>
-                <button class="btn btn-secondary" id="instructions-button">Instructions</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-secondary" id="instructions-button" data-bs-toggle="modal"
+                    data-bs-target="#instructionsModal">
+                    Instructions
+                </button>
             </div>
         </div>
     </nav>
@@ -70,6 +75,26 @@
 
             <div class="col-md-3 text-end">
                 <button id="cheat-button" class="btn btn-warning mb-3">Cheat</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="instructionsModalLabel">Game Instructions</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Add your game instructions here -->
+                    <p>Here are the instructions for the game...</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
