--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phrasology</title>
+    <title>Wheel of Fortune</title>
 
     <!-- Add bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,33 +26,31 @@
 <body class="bg-light">
     <!-- Nav bar with Game Title and instructions button -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <div class="container-fluid">
-            <div class="d-flex justify-content-between w-100">
-                <h1 class="navbar-brand mx-auto game-title">Game Name</h1>
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-secondary" id="instructions-button" data-bs-toggle="modal"
-                    data-bs-target="#instructionsModal">
-                    Instructions
-                </button>
-            </div>
+
+        <h1 class="navbar-brand game-title">Wheel of Fortune</h1>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-secondary ms-auto" id="instructions-button" data-bs-toggle="modal"
+            data-bs-target="#instructionsModal">
+            Instructions
+        </button>
+        </div>
         </div>
     </nav>
     <div class="container text-center py-5">
-        <!-- Highest score -->
-        <div class="row justify-content-center">
-            <div class="col-md-3 text-start">
-                <div class="mb-3">
 
-                    <label for="highest-score" class="form-label">Highest Score</label>
+        <div class="row justify-content-center rowbg">
+            <div class="col-md-3 text-center scores">
+                <div>
+                    <p>High Score:<br>
+                        <span id="high-score">0</span>
+                    </p>
                 </div>
                 <!-- Previous attempts board -->
                 <div>
                     <h5>Previous Attempts</h5>
                     <ul class="list-group">
                         <li class="list-group-item">Attempt 1</li>
-
                         <li class="list-group-item">Attempt 2</li>
-
                         <li class="list-group-item">Attempt 3</li>
                     </ul>
                 </div>
@@ -60,21 +58,31 @@
             </div>
 
             <!-- Game ui -->
-            <div class="col-md-6">
+            <div class="col-md-6 gameUi">
                 <h2 id="question" class="mb-4">Question</h2>
                 <div id="word-display" class="mb-4">_ _ _ _ _</div>
                 <div id="user-inputs">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary mt-3">Submit</button>
                 </div>
-                <div id="letters-used" class="mt-4">
-                    <strong>Letters Used:</strong> A, B, C
-                </div>
             </div>
 
-
-            <div class="col-md-3 text-end">
-                <button id="cheat-button" class="btn btn-warning mb-3">Cheat</button>
+            <!-- Cheat button and letters used -->
+            <div class="col-md-3 text-center">
+                <div>
+                    <p>Current Score:<br>
+                        <span id="current-score">0</span>
+                    </p>
+                </div>
+                <div>
+                    <button id="cheat-button" class="btn btn-warning mb-3">Cheat</button>
+                </div>
+                <div>
+                    <p>
+                        <strong>Letters Used:</strong><br>
+                        <span id="letters-used">A, B, C</span>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
