Add word-display id

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 <body class="bg-light">
     <!-- Nav bar with Game Title and instructions button -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 margin-auto">
-            <h1 class="navbar-brand game-title">Wheel of Fortune</h1>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-secondary ms-auto" id="instructions-button" data-bs-toggle="modal"
-                data-bs-target="#instructionsModal">
-                Instructions
-            </button>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 margin-auto">
+        <h1 class="navbar-brand game-title">Wheel of Fortune</h1>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-secondary ms-auto" id="instructions-button" data-bs-toggle="modal"
+            data-bs-target="#instructionsModal">
+            Instructions
+        </button>
+    </nav>
 
     <div class="container text-center py-5">
         <div class="row justify-content-center rowbg">
@@ -59,7 +59,7 @@
             <!-- Game ui -->
             <div class="col-md-6 gameUi py-3">
                 <h2 id="question" class="my-3">Question</h2>
-                <div id="word-display" class="my-3">_ _ _ _ _</div>
+                <div class="my-3"><p id="word-display">_ _ _ _ _</p></div>
                 <div id="user-inputs" class="my-3">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <button id="submit-button" class="btn btn-primary my-3">Submit</button>
