--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Add your game instructions here -->
-                    <p>Type your single letter guess into the bar below, or a complete guess to solve!</p>
+                    <p>Type your single letter guess into the bar below, or a complete guess to solve! <br> Guessing a consonant wrong costs 50 points</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
