--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="my-3"><p id="word-display">_ _ _ _ _</p></div>
                 <div id="user-inputs" class="my-3">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
+                    <p class="feedback my-3"></p><br>
                     <button id="submit-button" class="btn btn-primary my-3">Submit</button>
                 </div>
             </div>
