instructions text added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             <!-- Game ui -->
             <div class="col-md-6 gameUi py-3">
                 <h2 id="question" class="my-3">Question</h2>
-                <div class="my-3"><p id="word-display">_ _ _ _ _</p></div>
+                <div class="my-3">
+                    <p id="word-display">_ _ _ _ _</p>
+                </div>
                 <div id="user-inputs" class="my-3">
                     <input type="text" class="form-control" id="user-guess" placeholder="Enter your guess">
                     <p id="feedback" class="my-3"><br></p>
@@ -98,7 +100,9 @@
                 </div>
                 <div class="modal-body">
                     <!-- Add your game instructions here -->
-                    <p>Type your single letter guess into the bar below, or a complete guess to solve! <br> Guessing a consonant wrong costs 50 points</p>
+                    <p>Type your single letter guess into the bar below, or a complete guess to solve! <br> Guessing a
+                        consonant wrong costs 50 points <br> Guessing a vowel wrong costs 100! <br> Cheating a letter
+                        costs 100 points <br> Good luck and happy guessing!</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
