--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wheel of Fortune</title>
 
+    <!-- (Maybe) Temporary favicon -->
+    <link rel="apple-touch-icon" sizes="128x128" href="assets/favicon/128favicon.webp">
+    <link rel="icon" type="image/png" sizes="128x128" href="assets/favicon/128favicon.webp">
+
     <!-- Add bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
