--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 <body class="bg-light">
     <!-- Nav bar with Game Title and instructions button -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 margin-auto">
-        <h1 class="navbar-brand game-title">Wheel of Fortune</h1>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-secondary ms-auto" id="instructions-button" data-bs-toggle="modal"
-            data-bs-target="#instructionsModal">
-            Instructions
-        </button>
+        <div class="container">
+            <h1 class="navbar-brand game-title">Wheel of Fortune</h1>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-secondary ms-auto" id="instructions-button" data-bs-toggle="modal"
+                data-bs-target="#instructionsModal">
+                Instructions
+            </button>
+        </div>
     </nav>
 
     <div class="container text-center py-5">
