Add meta tag, contrast to cheat button text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple Wheel of Fortune game the Steve wanted to call Phraseology but was overruled
+        where you can guess the word and earn points.">
+
     <title>Wheel of Fortune</title>
 
     <!-- (Maybe) Temporary favicon -->
@@ -50,7 +53,7 @@
                 </div>
                 <!-- Previous attempts board -->
                 <div class="my-3">
-                    <h5>Previous 3 Attempts</h5>
+                    <h1 class="h5">Previous 3 Attempts</h1>
                     <ul id="prev-attempts" class="list-group">
                         <li class="list-group-item">Attempt 1: <span id="attempt-1">0</span></li>
                         <li class="list-group-item">Attempt 2: <span id="attempt-2">0</span></li>
