readme updates, minor html updates

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <!-- Game ui -->
             <div class="col-md-6 gameUi py-3">
-                <h2 id="question" class="my-3">Question</h2>
+                <h1 class="h2" id="question" class="my-3">Question</h1>
                 <div class="my-3">
                     <p id="word-display">_ _ _ _ _</p>
                 </div>
@@ -104,7 +104,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="instructionsModalLabel">Game Instructions</h5>
+                    <h1 class="modal-title h5" id="instructionsModalLabel">Game Instructions</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
