--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <!-- Game ui -->
             <div class="col-md-6 gameUi py-3">
-                <h1 class="h2" id="question" class="my-3">Question</h1>
+                <h1 id="question" class="my-3 h2">Question</h1>
                 <div class="my-3">
                     <p id="word-display">_ _ _ _ _</p>
                 </div>
